# BingX-WS

./: BingXWS.hpp  BoostIncludes.hpp  CMakeLists.txt  Indicator.hpp  KLineData.hpp  KlineDataAggregator.hpp  LICENSE  README.md  Utils.cpp  Utils.hpp  WebSocketSession.cpp  WebSocketSession.hpp  main.cpp
